--- a/app/src/main/res/layout/activity_product_page.xml
+++ b/app/src/main/res/layout/activity_product_page.xml
@@ -109,7 +109,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="16dp"
                     android:fontFamily="@font/montserrat_medium"
-                    android:text="(... people bought this)"
+                    android:text="(Sold ... piece)"
                     android:textColor="@color/black"
                     android:textSize="13sp"
                     app:layout_constraintStart_toEndOf="@+id/textView86"
