--- a/app/src/main/res/layout/filter_popup.xml
+++ b/app/src/main/res/layout/filter_popup.xml
@@ -184,11 +184,11 @@
             android:id="@+id/checkBox12"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="5.0"
+            android:text="⭐ ⭐ ⭐ ⭐ ⭐"
             android:fontFamily="@font/montserrat_regular"
             android:textColor="@color/black"
             android:textSize="20sp"
+            android:layout_marginBottom="8sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/checkBox11" />
 
@@ -196,11 +196,11 @@
                 android:id="@+id/checkBox11"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="4.0-4.9"
+                android:text="⭐ ⭐ ⭐ ⭐"
                 android:fontFamily="@font/montserrat_regular"
                 android:textColor="@color/black"
                 android:textSize="20sp"
+                android:layout_marginBottom="8sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/checkBox10" />
 
@@ -208,8 +208,8 @@
                 android:id="@+id/checkBox10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="3.0-3.9"
+                android:text="⭐ ⭐ ⭐"
+                android:layout_marginBottom="8sp"
                 android:fontFamily="@font/montserrat_regular"
                 android:textColor="@color/black"
                 android:textSize="20sp"
@@ -220,8 +220,8 @@
                 android:id="@+id/checkBox9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="2.0-2.9"
+                android:text="⭐ ⭐"
+                android:layout_marginBottom="8sp"
                 android:fontFamily="@font/montserrat_regular"
                 android:textColor="@color/black"
                 android:textSize="20sp"
@@ -232,8 +232,8 @@
                 android:id="@+id/checkBox8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="1.0-1.9"
+                android:text="⭐"
+                android:layout_marginBottom="8sp"
                 android:fontFamily="@font/montserrat_regular"
                 android:textColor="@color/black"
                 android:textSize="20sp"
