--- a/app/src/main/res/layout/fragment_ongoing.xml
+++ b/app/src/main/res/layout/fragment_ongoing.xml
@@ -20,16 +20,17 @@
         android:id="@+id/textOngoingEmpty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nothing to show here.\nYou don't have any ongoing orders."
-        android:textSize="16sp"
-        android:gravity="center"
-        android:textColor="@color/gray"
-        android:fontFamily="@font/montserrat_medium"
         android:layout_margin="16dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:fontFamily="@font/montserrat_medium"
+        android:gravity="center"
+        android:text="Nothing to show here.\nYou don't have any ongoing orders."
+        android:textColor="@color/gray"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.468" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerOngoing"
