--- a/app/src/main/res/layout/activity_delivery_fee.xml
+++ b/app/src/main/res/layout/activity_delivery_fee.xml
@@ -89,7 +89,7 @@
             android:hint="Select City"
             android:padding="12dp"
             android:textSize="14sp"
-            android:textColor="@color/gray"
+            android:textColor="@color/black"
             android:textStyle="bold"
             tools:layout_editor_absoluteX="47dp"
             tools:layout_editor_absoluteY="224dp" />
